[package]

name = "03-wow-a-triangle"
version = "0.1.0"
license = "ASL2"
authors = [ "Brendan Zabarauskas" ]

[[bin]]

name = "03-wow-a-triangle"

[dependencies.cgmath-rs]

git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.gl]

git = "https://github.com/bjz/gl-rs.git"

[dependencies.glfw]

git = "https://github.com/bjz/glfw-rs.git"
